# SimpleArm

./: README.md  pyproject.toml
examples/: 01_basics.py  02_visualization.py  03_voxel_worlds.py  04_gradients.py  04_trajectories.py  05_ompl.py
src/simplearm/: __init__.py  costs.py  dynamics.py  geom.py  jacobians.py  kinematics.py  perlin.py  robot.py  utils.py  viz.py
