[project]
name = "SimpleArm"
version = "0.1.0"
description = "Two-dimensional playground for planning"
readme = "README.md"
authors = [
    { name = "Lennard Stoellger", email = "Lennard.Stoellger@tum.de" },
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "scipy>=1.15.0",
    "plotly>=6.6.0",
    "matplotlib>=3.10.8",
    "scipy-stubs>=1.17.1.3",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "viser",
    "yaspin>=3.4.0",
    "ompl>=2.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "ty>=0.0.12",
    "ruff>=0.14.14",
]

[project.scripts]
simplearm = "simplearm:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
